Supported download `save-cli` from GitHub instead of classpath (#1916)
