# save-backend/src/main/kotlin/com/saveourtool/save/backend/controllers/internal/AgentsController.kt
@@ -14,7 +14,6 @@ import com.saveourtool.save.entities.*
 import com.saveourtool.save.storage.impl.InternalFileKey
 import com.saveourtool.save.test.TestDto
 import com.saveourtool.save.utils.*
-import generated.SAVE_CORE_VERSION
 
 import org.slf4j.LoggerFactory
 import org.springframework.http.HttpStatus
@@ -64,7 +63,7 @@ class AgentsController(
         }
         .map { execution ->
             AgentInitConfig(
-                saveCliUrl = internalFileStorage.generateRequiredUrlToDownload(InternalFileKey.saveCliKey(SAVE_CORE_VERSION))
+                saveCliUrl = internalFileStorage.generateRequiredUrlToDownload(InternalFileKey.saveCliKey(execution.saveCliVersion))
                     .toString(),
                 testSuitesSourceSnapshotUrl = executionService.getRelatedTestsSourceSnapshot(execution.requiredId())
                     .let { testsSourceSnapshot ->
